--- a/src/app/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/carbon-footprint/carbon-footprint.component.html
@@ -3,7 +3,7 @@
 
 <p [className]="distanceKm > 500 ? 'haute-distance' : distanceKm < 100 ? 'basse-distance' : undefined">distance parcourue: {{distanceKm}}km</p>
 <p [style]="{color: consommationPour100Km > 7 ? 'red' : consommationPour100Km < 4 ? 'green' : undefined}">
-    consommation pour 100km: {{consommationPour100Km}}L 
+    consommation pour 100km: {{consommationPour100Km | number: '1.0-2'}}L 
     @if(consommationPour100Km > 7){
         <span class="warning-span">Attention, votre consommation est élevée</span>
     }
@@ -11,7 +11,7 @@
         <span class="success-span">Félicitations, votre consommation est faible</span>
     }
 </p>
-<p>consommation totale: {{consommationPour100Km * distanceKm/100}}L</p>
+<p>consommation totale: {{consommationPour100Km * distanceKm/100 | number: '1.0-2'}}L</p>
 <button (click)="add100Km()">Ajouter 100km</button>
 
 <h2>Liste des voyages</h2>
@@ -29,3 +29,5 @@
         </tr>
     </tbody>
 </table>
+
+<button (click)="genererVoyage()">Generer un nouveau voyage</button>
