--- a/src/app/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/carbon-footprint/carbon-footprint.component.html
@@ -1,32 +1,59 @@
-<app-carbon-footprint-form/>
-<app-carbon-footprint-result/>
+<app-carbon-footprint-form />
+<app-carbon-footprint-result />
 
-<p [className]="distanceKm() > 500 ? 'haute-distance' : distanceKm() < 100 ? 'basse-distance' : undefined">distance parcourue: {{distanceKm()}}km</p>
-<p [style]="{color: consommationPour100Km() > 7 ? 'red' : consommationPour100Km() < 4 ? 'green' : undefined}">
-    consommation pour 100km: {{consommationPour100Km() | number: '1.0-2'}}L 
-    @if(consommationPour100Km() > 7){
-        <span class="warning-span">Attention, votre consommation est élevée</span>
-    }
-    @if(consommationPour100Km() < 4) {
-        <span class="success-span">Félicitations, votre consommation est faible</span>
-    }
+<p
+  [className]="
+    distanceKm() > 500
+      ? 'haute-distance'
+      : distanceKm() < 100
+      ? 'basse-distance'
+      : undefined
+  "
+>
+  distance parcourue: {{ distanceKm() }}km
 </p>
-<p>consommation totale: {{consommationPour100Km() * distanceKm()/100 | number: '1.0-2'}}L</p>
+<p
+  [style]="{
+    color:
+      consommationPour100Km() > 7
+        ? 'red'
+        : consommationPour100Km() < 4
+        ? 'green'
+        : undefined
+  }"
+>
+  consommation pour 100km: {{ consommationPour100Km() | number : "1.0-2" }}L
+  @if(consommationPour100Km() > 7){
+  <span class="warning-span">Attention, votre consommation est élevée</span>
+  } @if(consommationPour100Km() < 4) {
+  <span class="success-span">Félicitations, votre consommation est faible</span>
+  }
+</p>
+<p>
+  consommation totale:
+  {{ (consommationPour100Km() * distanceKm()) / 100 | number : "1.0-2" }}L
+</p>
+<p>
+  Emissions totale de CO2:
+  {{ emissionsCO2() | number : "1.0-2" }}kg
+</p>
 
 <h2>Liste des voyages</h2>
 <table>
-    <thead>
-        <tr>
-            <th>Distance</th>
-            <th>Consommation pour 100 kms</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let voyage of voyages()">
-            <td>{{ voyage.distanceKm }} km</td>
-            <td>{{ voyage.consommationPour100Km }} L</td>
-        </tr>
-    </tbody>
+  <thead>
+    <tr>
+      <th>Distance</th>
+      <th>Consommation pour 100 kms</th>
+      <th>Emissions CO2</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let voyage of voyages()">
+      <td>{{ voyage.distanceKm }}km</td>
+      <td>{{ voyage.consommationPour100Km }}L</td>
+      <td>{{ voyage.quantiteCO2 | number : "1.0-2" }}kg</td>
+    </tr>
+  </tbody>
 </table>
 
-<button (click)="genererVoyage()">Generer un nouveau voyage</button>
+<button (click)="generateVoyage()">Generer un nouveau voyage</button>
