feat: add @angular/material to stylise app

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,2 +1,4 @@
-<p>Created by Loic Duvail, 22/04/2025</p>
-<p>Nous sommes le {{date | date: 'dd/MM/yyyy'}}</p>
+<footer>
+  <p>Created by Loic Duvail, 22/04/2025</p>
+  <p>Nous sommes le {{ date | date : "dd/MM/yyyy" }}</p>
+</footer>
