--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,4 @@
-<h1>Calcul empreinte carbone</h1>
-<p>Bienvenu {{nomUtilisateur()}}</p>
+<header>
+  <h1>Calcul empreinte carbone</h1>
+  <p>Bienvenu {{ nomUtilisateur() }}</p>
+</header>
