--- a/src/app/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/carbon-footprint/carbon-footprint.component.html
@@ -1,59 +1,73 @@
-<app-carbon-footprint-form />
-<app-carbon-footprint-result />
+<!-- <app-carbon-footprint-form />
+<app-carbon-footprint-result /> -->
+<div class="container gap-16-container">
+  <div class="outlined-container">
+    <p
+      [className]="
+        distanceKm() > 500
+          ? 'haute-distance'
+          : distanceKm() < 100
+          ? 'basse-distance'
+          : undefined
+      "
+    >
+      distance parcourue: {{ distanceKm() }}km
+    </p>
+    <p
+      [style]="{
+        color:
+          consommationPour100Km() > 7
+            ? 'red'
+            : consommationPour100Km() < 4
+            ? 'green'
+            : undefined
+      }"
+    >
+      consommation pour 100km: {{ consommationPour100Km() | number : "1.0-2" }}L
+      @if(consommationPour100Km() > 7){
+      <span class="warning-span">Attention, votre consommation est élevée</span>
+      } @if(consommationPour100Km() < 4) {
+      <span class="success-span"
+        >Félicitations, votre consommation est faible</span
+      >
+      }
+    </p>
+    <p>
+      consommation totale:
+      {{ (consommationPour100Km() * distanceKm()) / 100 | number : "1.0-2" }}L
+    </p>
+    <p>
+      Emissions totale de CO2:
+      {{ emissionsCO2() | number : "1.0-2" }}kg
+    </p>
+  </div>
 
-<p
-  [className]="
-    distanceKm() > 500
-      ? 'haute-distance'
-      : distanceKm() < 100
-      ? 'basse-distance'
-      : undefined
-  "
->
-  distance parcourue: {{ distanceKm() }}km
-</p>
-<p
-  [style]="{
-    color:
-      consommationPour100Km() > 7
-        ? 'red'
-        : consommationPour100Km() < 4
-        ? 'green'
-        : undefined
-  }"
->
-  consommation pour 100km: {{ consommationPour100Km() | number : "1.0-2" }}L
-  @if(consommationPour100Km() > 7){
-  <span class="warning-span">Attention, votre consommation est élevée</span>
-  } @if(consommationPour100Km() < 4) {
-  <span class="success-span">Félicitations, votre consommation est faible</span>
-  }
-</p>
-<p>
-  consommation totale:
-  {{ (consommationPour100Km() * distanceKm()) / 100 | number : "1.0-2" }}L
-</p>
-<p>
-  Emissions totale de CO2:
-  {{ emissionsCO2() | number : "1.0-2" }}kg
-</p>
+  <h2>Liste des voyages</h2>
+  <table mat-table [dataSource]="voyages()">
+    <ng-container matColumnDef="distance">
+      <th mat-header-cell *matHeaderCellDef>Distance parcourue</th>
+      <td mat-cell *matCellDef="let voyage">{{ voyage.distanceKm }} km</td>
+    </ng-container>
 
-<h2>Liste des voyages</h2>
-<table>
-  <thead>
-    <tr>
-      <th>Distance</th>
-      <th>Consommation pour 100 kms</th>
-      <th>Emissions CO2</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let voyage of voyages()">
-      <td>{{ voyage.distanceKm }}km</td>
-      <td>{{ voyage.consommationPour100Km }}L</td>
-      <td>{{ voyage.quantiteCO2 | number : "1.0-2" }}kg</td>
-    </tr>
-  </tbody>
-</table>
+    <ng-container matColumnDef="consommation">
+      <th mat-header-cell *matHeaderCellDef>Consommation pour 100 km</th>
+      <td mat-cell *matCellDef="let voyage">
+        {{ voyage.consommationPour100Km }} L
+      </td>
+    </ng-container>
 
-<button (click)="generateVoyage()">Generer un nouveau voyage</button>
+    <ng-container matColumnDef="emissions">
+      <th mat-header-cell *matHeaderCellDef>Emissions CO2</th>
+      <td mat-cell *matCellDef="let voyage">
+        {{ voyage.quantiteCO2 | number : "1.1-2" }} kg
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <button mat-button (click)="generateVoyage()">
+    Generer un nouveau voyage
+  </button>
+</div>
