--- a/src/app/carbon-footprint/carbon-footprint.component.scss
+++ b/src/app/carbon-footprint/carbon-footprint.component.scss
@@ -1,9 +1,14 @@
-.haute-distance{
-    font-weight: bold;
-    color: red
+.haute-distance {
+  font-weight: bold;
+  color: red;
 }
 
-.basse-distance{
-    font-weight: bold;
-    color: green
+.basse-distance {
+  font-weight: bold;
+  color: green;
+}
+
+.container {
+  box-sizing: border-box;
+  padding: 16px;
 }
