--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer>
   <p>Created by Loic Duvail, 22/04/2025</p>
-  <p>Nous sommes le {{ date | date : "dd/MM/yyyy" }}</p>
+  <!-- <p>Nous sommes le {{ date | date : "dd/MM/yyyy" }}</p> -->
 </footer>
