--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,10 @@ app-root {
   justify-content: space-between;
 }
 
+.page-container {
+  padding: 16px;
+}
+
 .gap-16-container {
   display: flex;
   flex-direction: column;
