feat (level 2): implement login mock

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,6 +12,8 @@
         >
       </li>
     </ul>
-    <p>Bienvenu {{ nomUtilisateur() }}</p>
+    @if(username()){
+    <p>Bienvenu {{ username() }}</p>
+    }
   </nav>
 </header>
