--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,19 @@
 <header>
   <h1>Calcul empreinte carbone</h1>
-  <p>Bienvenu {{ nomUtilisateur() }}</p>
+  <nav>
+    <ul>
+      <li>
+        <a
+          mat-button
+          routerLink="/profile"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          >Voir mon profile</a
+        >
+      </li>
+    </ul>
+    @if(username()){
+    <p>Bienvenu {{ username() }}</p>
+    }
+  </nav>
 </header>
