feat (level 1): add login form on home page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,7 @@
       <li>
         <a
           mat-button
+          [disabled]="!username()"
           routerLink="/profile"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
@@ -14,6 +15,7 @@
       <li>
         <a
           mat-button
+          [disabled]="!username()"
           routerLink="/carbon-footprint"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
