--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,23 @@
 <div class="page-container">
-  <p>Bienvenu</p>
-  <button mat-stroked-button (click)="handleButtonClick()">
-    acceder a la page de calcul d'empreinte carbone
-  </button>
+  <h2>Bienvenu</h2>
+  <form [formGroup]="form" (ngSubmit)="submitForm()" class="outlined-container">
+    <h3>Connection</h3>
+    <mat-form-field>
+      <mat-label>Nom utilisateur</mat-label>
+      <input matInput formControlName="username" />
+      @if(submited && form.get('username')?.errors){
+      <div class="field-error">Le nom doit faire au moin 3 caractères</div>
+      }
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Mot de passe</mat-label>
+      <input matInput type="password" formControlName="password" />
+      @if(submited && form.get('password')?.errors){
+      <div class="field-error">
+        Le mot de passe doit faire au moin 6 caractères
+      </div>
+      }
+    </mat-form-field>
+    <button mat-stroked-button type="submit">Me connecter</button>
+  </form>
 </div>
