feat (level 2): implement add voyage form

--- a/src/app/pages/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/pages/carbon-footprint/carbon-footprint.component.html
@@ -67,7 +67,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <button mat-button (click)="generateVoyage()">
-    Generer un nouveau voyage
-  </button>
+  <app-carbon-footprint-form />
 </div>
