--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,20 @@ app-root {
   border-radius: 8px;
 }
 
+form {
+  width: 300px;
+  padding: 16px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+form.centered {
+  min-width: 50%;
+  padding: 0;
+  padding-bottom: 16px;
+}
+
 .field-error {
   font-size: small;
   color: red;
