--- a/src/app/pages/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/pages/carbon-footprint/carbon-footprint.component.html
@@ -44,6 +44,11 @@
 
   <h2>Liste des voyages</h2>
   <table mat-table [dataSource]="voyages()">
+    <ng-container matColumnDef="vehicule">
+      <th mat-header-cell *matHeaderCellDef>Vehicule</th>
+      <td mat-cell *matCellDef="let voyage">{{ voyage.vehicule }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="distance">
       <th mat-header-cell *matHeaderCellDef>Distance parcourue</th>
       <td mat-cell *matCellDef="let voyage">{{ voyage.distanceKm }} km</td>
@@ -67,7 +72,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <button mat-button (click)="generateVoyage()">
-    Generer un nouveau voyage
-  </button>
+  <app-carbon-footprint-form />
 </div>
