--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,17 @@ form.centered {
   font-size: small;
   color: red;
 }
+
+.loading-button {
+  .mdc-button__label {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    mat-spinner {
+      position: absolute;
+      left: 0;
+    }
+  }
+}
