feat (level 2): add async to carbon-footprint-compute

--- a/src/app/pages/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/pages/carbon-footprint/carbon-footprint.component.html
@@ -2,6 +2,17 @@
 <app-carbon-footprint-result /> -->
 <div class="container gap-16-container">
   <div class="outlined-container">
+    @if(resumeLoading){
+    <ngx-skeleton-loader
+      [theme]="{
+        width: '300px',
+        display: 'flex',
+        flexDirection: 'column',
+        margin: '16px 0'
+      }"
+      count="4"
+    />
+    }@else{
     <p
       [className]="
         distanceKm() > 500
@@ -40,35 +51,52 @@
       Emissions totale de CO2:
       {{ emissionsCO2() | number : "1.0-2" }}kg
     </p>
+    }
   </div>
 
   <h2>Liste des voyages</h2>
-  <table mat-table [dataSource]="voyages()">
+  <table mat-table [dataSource]="voyagesLoading ? skeletonVoyages : voyages()">
     <ng-container matColumnDef="vehicule">
       <th mat-header-cell *matHeaderCellDef>Vehicule</th>
       <td mat-cell *matCellDef="let voyage">
+        @if(voyagesLoading){<ngx-skeleton-loader
+          [theme]="{ width: '68px', height: '32px' }"
+          count="1"
+        />} @else{
         <mat-chip>
           {{ voyage.vehicule }}
         </mat-chip>
+        }
       </td>
     </ng-container>
 
     <ng-container matColumnDef="distance">
       <th mat-header-cell *matHeaderCellDef>Distance parcourue</th>
-      <td mat-cell *matCellDef="let voyage">{{ voyage.distanceKm }} km</td>
+      <td mat-cell *matCellDef="let voyage">
+        @if(voyagesLoading){
+        <ngx-skeleton-loader count="1" />
+        }@else{
+        {{ voyage.distanceKm }} km }
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="consommation">
       <th mat-header-cell *matHeaderCellDef>Consommation pour 100 km</th>
       <td mat-cell *matCellDef="let voyage">
-        {{ voyage.consommationPour100Km }} L
+        @if(voyagesLoading){
+        <ngx-skeleton-loader count="1" />
+        }@else{
+        {{ voyage.consommationPour100Km }} L }
       </td>
     </ng-container>
 
     <ng-container matColumnDef="emissions">
       <th mat-header-cell *matHeaderCellDef>Emissions CO2</th>
       <td mat-cell *matCellDef="let voyage">
-        {{ voyage.quantiteCO2 | number : "1.1-2" }} kg
+        @if(voyagesLoading){
+        <ngx-skeleton-loader count="1" />
+        }@else{
+        {{ voyage.quantiteCO2 | number : "1.1-2" }} kg }
       </td>
     </ng-container>
 
