feat: use custom loading button

--- a/src/app/components/pages/carbon-footprint/components/carbon-footprint-form/carbon-footprint-form.component.html
+++ b/src/app/components/pages/carbon-footprint/components/carbon-footprint-form/carbon-footprint-form.component.html
@@ -35,5 +35,5 @@
     <mat-label>Date</mat-label>
     <input matInput type="date" formControlName="date" />
   </mat-form-field>
-  <button mat-stroked-button type="submit">Ajouter le voyage</button>
+  <app-loading-button [loading]="loading">Ajouter le voyage</app-loading-button>
 </form>
