--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,8 +40,8 @@ app-root {
 .outlined-container {
   padding: 8px 16px;
 
-  border: 1px solid black;
-  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.192);
+  border-radius: 6px;
 }
 
 form {
