fix: fix co2emissions computation

--- a/src/app/components/pages/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/components/pages/carbon-footprint/carbon-footprint.component.html
@@ -89,7 +89,12 @@
         @if(voyagesLoading){
         <app-skeleton />
         }@else{
-        {{ voyage.consommationPour100Km }} L }
+        {{
+          voyage.vehicule === "voiture"
+            ? voyage.consommationPour100Km + " L"
+            : "-"
+        }}
+        }
       </td>
     </ng-container>
 
